search and some stuff, it's cold af rn

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 
 @layer utilities {
     @variants responsive {
+        .title-img-height{
+            height: fit-content;
+            height:-moz-max-content;
+        }
         .no-scrollbar::-webkit-scrollbar {
             display: none;
         }
