--- a/src/index.css
+++ b/src/index.css
@@ -2,133 +2,130 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
-    @variants responsive {
-        .title-img-height{
-            height: fit-content;
-            height:-moz-max-content;
-        }
-        .no-scrollbar::-webkit-scrollbar {
-            display: none;
-        }
 
-        .no-scrollbar {
-            -ms-overflow-style: none; 
-            scrollbar-width: none;  
-        }
-
-        /* Blue */
-        .scrollbar-blue::-webkit-scrollbar-track{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-            background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
-        }
-        
-        .scrollbar-blue::-webkit-scrollbar{
-            width: 0.5rem;
-            background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
-        }
-        
-        .scrollbar-blue::-webkit-scrollbar-thumb{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-            background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
-        }
-
-        /* Red */
-        .scrollbar-red::-webkit-scrollbar-track{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-            background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
-        }
-        
-        .scrollbar-red::-webkit-scrollbar{
-            width: 0.5rem;
-            background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
-        }
-        
-        .scrollbar-red::-webkit-scrollbar-thumb{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-            background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
-        }
-
-        /* Yellow */
-        .scrollbar-yellow::-webkit-scrollbar-track{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-            background-color: rgba(253, 230, 138, var(--tw-bg-opacity));	
-        }
-        
-        .scrollbar-yellow::-webkit-scrollbar{
-            width: 0.5rem;
-            background-color: rgba(253, 230, 138, var(--tw-bg-opacity));	
-        }
-        
-        .scrollbar-yellow::-webkit-scrollbar-thumb{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-            background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
-        }
-
-        /* Green */
-        .scrollbar-green::-webkit-scrollbar-track{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-            background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
-        }
-        
-        .scrollbar-green::-webkit-scrollbar{
-            width: 0.5rem;
-            background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
-        }
-        
-        .scrollbar-green::-webkit-scrollbar-thumb{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-            background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
-        }
-
-        /* Indigo */
-        .scrollbar-indigo::-webkit-scrollbar-track{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-            background-color: rgba(199, 210, 254, var(--tw-bg-opacity));
-        }
-        
-        .scrollbar-indigo::-webkit-scrollbar{
-            width: 0.5rem;
-            background-color: rgba(199, 210, 254, var(--tw-bg-opacity));
-        }
-        
-        .scrollbar-indigo::-webkit-scrollbar-thumb{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-            background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
-        }
-
-        /* Purple */
-        .scrollbar-purple::-webkit-scrollbar-track{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-            background-color: rgba(221, 214, 254, var(--tw-bg-opacity));
-        }
-        
-        .scrollbar-purple::-webkit-scrollbar{
-            width: 0.5rem;
-            background-color: rgba(221, 214, 254, var(--tw-bg-opacity));
-        }
-        
-        .scrollbar-purple::-webkit-scrollbar-thumb{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-            background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
-        }
-
-        /* Pink */
-        .scrollbar-pink::-webkit-scrollbar-track{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-            background-color: rgba(251, 207, 232, var(--tw-bg-opacity));
-        }
-        
-        .scrollbar-pink::-webkit-scrollbar{
-            width: 0.5rem;
-            background-color: rgba(251, 207, 232, var(--tw-bg-opacity));
-        }
-        
-        .scrollbar-pink::-webkit-scrollbar-thumb{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-            background-color: rgba(219, 39, 119, var(--tw-bg-opacity));
-        }
-    }
+.title-img-height{
+    height: fit-content;
+    height:-moz-max-content;
 }
-/* 
-200/200/600 */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none; 
+    scrollbar-width: none;  
+}
+
+/* Blue */
+.scrollbar-blue::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
+}
+
+.scrollbar-blue::-webkit-scrollbar{
+    width: 0.5rem;
+    background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
+}
+
+.scrollbar-blue::-webkit-scrollbar-thumb{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
+}
+
+/* Red */
+.scrollbar-red::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
+}
+
+.scrollbar-red::-webkit-scrollbar{
+    width: 0.5rem;
+    background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
+}
+
+.scrollbar-red::-webkit-scrollbar-thumb{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
+}
+
+/* Yellow */
+.scrollbar-yellow::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: rgba(253, 230, 138, var(--tw-bg-opacity));	
+}
+
+.scrollbar-yellow::-webkit-scrollbar{
+    width: 0.5rem;
+    background-color: rgba(253, 230, 138, var(--tw-bg-opacity));	
+}
+
+.scrollbar-yellow::-webkit-scrollbar-thumb{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
+}
+
+/* Green */
+.scrollbar-green::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
+}
+
+.scrollbar-green::-webkit-scrollbar{
+    width: 0.5rem;
+    background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
+}
+
+.scrollbar-green::-webkit-scrollbar-thumb{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
+}
+
+/* Cyan */
+.scrollbar-cyan::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: rgba(165, 243, 252, var(--tw-bg-opacity));
+}
+
+.scrollbar-cyan::-webkit-scrollbar{
+    width: 0.5rem;
+    background-color: rgba(165, 243, 252, var(--tw-bg-opacity));
+}
+
+.scrollbar-cyan::-webkit-scrollbar-thumb{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: rgba(8, 145, 178, var(--tw-bg-opacity));
+}
+
+/* Purple */
+.scrollbar-purple::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: rgba(245, 208, 254, var(--tw-bg-opacity));
+}
+
+.scrollbar-purple::-webkit-scrollbar{
+    width: 0.5rem;
+    background-color: rgba(245, 208, 254, var(--tw-bg-opacity));
+}
+
+.scrollbar-purple::-webkit-scrollbar-thumb{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: rgba(192, 38, 211, var(--tw-bg-opacity));
+}
+
+/* Pink */
+.scrollbar-pink::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: rgba(251, 207, 232, var(--tw-bg-opacity));
+}
+
+.scrollbar-pink::-webkit-scrollbar{
+    width: 0.5rem;
+    background-color: rgba(251, 207, 232, var(--tw-bg-opacity));
+}
+
+.scrollbar-pink::-webkit-scrollbar-thumb{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: rgba(219, 39, 119, var(--tw-bg-opacity));
+}
+
+/* 200/200/600 */
